{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 287,
  "lineage": "2b93aaad-2464-99ad-ba20-6a8e210a612b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eips",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c306e274632a319",
            "arn": "arn:aws:ec2:us-west-2:563725454582:elastic-ip/eipalloc-03c306e274632a319",
            "domain": "vpc",
            "id": "eipalloc-03c306e274632a319",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-34-210-173-141.us-west-2.compute.amazonaws.com",
            "public_ip": "34.210.173.141",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.tera-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-072e52082f8f6617f",
            "arn": "arn:aws:ec2:us-west-2:563725454582:elastic-ip/eipalloc-072e52082f8f6617f",
            "domain": "vpc",
            "id": "eipalloc-072e52082f8f6617f",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-52-10-220-30.us-west-2.compute.amazonaws.com",
            "public_ip": "52.10.220.30",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:563725454582:internet-gateway/igw-07d631c26110c5d26",
            "id": "igw-07d631c26110c5d26",
            "owner_id": "563725454582",
            "tags": {
              "Name": "tera-igw"
            },
            "tags_all": {
              "Name": "tera-igw"
            },
            "vpc_id": "vpc-03a0cb65b4363d7ab"
          },
          "dependencies": [
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tera-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:563725454582:loadbalancer/app/tera-lb/233226046f58c073",
            "arn_suffix": "app/tera-lb/233226046f58c073",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tera-lb-1373442463.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:563725454582:loadbalancer/app/tera-lb/233226046f58c073",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tera-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0054660940deef4a0"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03b31f2cd6f1836de"
              },
              {
                "subnet_id": "subnet-07ff7fc1368abe13f"
              }
            ],
            "subnets": [
              "subnet-03b31f2cd6f1836de",
              "subnet-07ff7fc1368abe13f"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-03a0cb65b4363d7ab",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.Bastion-public-sg",
            "aws_subnet.tera-public-subnet1",
            "aws_subnet.tera-public-subnet2",
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tera-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:563725454582:listener/app/tera-lb/233226046f58c073/1674b862b97c1db3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:563725454582:targetgroup/tera-TG/3f01aa1e792c9872",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:563725454582:listener/app/tera-lb/233226046f58c073/1674b862b97c1db3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:563725454582:loadbalancer/app/tera-lb/233226046f58c073",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.tera-lb",
            "aws_lb_target_group.tera-TG",
            "aws_security_group.Bastion-public-sg",
            "aws_subnet.tera-public-subnet1",
            "aws_subnet.tera-public-subnet2",
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tera-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:563725454582:targetgroup/tera-TG/3f01aa1e792c9872",
            "arn_suffix": "targetgroup/tera-TG/3f01aa1e792c9872",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:563725454582:targetgroup/tera-TG/3f01aa1e792c9872",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tera-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03a0cb65b4363d7ab"
          },
          "dependencies": [
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c306e274632a319",
            "association_id": "eipassoc-05cdd22fc47ba9947",
            "connectivity_type": "public",
            "id": "nat-01c6707d0c0739d79",
            "network_interface_id": "eni-04dbe889f450389ee",
            "private_ip": "10.0.1.17",
            "public_ip": "34.210.173.141",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07ff7fc1368abe13f",
            "tags": {
              "Name": "tera-NAT1"
            },
            "tags_all": {
              "Name": "tera-NAT1"
            }
          },
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.igw",
            "aws_subnet.tera-public-subnet1",
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-072e52082f8f6617f",
            "association_id": "eipassoc-0354cb66254af9355",
            "connectivity_type": "public",
            "id": "nat-01a64c3044c191c85",
            "network_interface_id": "eni-01b8a8c2f5cf990ec",
            "private_ip": "10.0.2.221",
            "public_ip": "52.10.220.30",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03b31f2cd6f1836de",
            "tags": {
              "Name": "tera-NAT2"
            },
            "tags_all": {
              "Name": "tera-NAT2"
            }
          },
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.igw",
            "aws_subnet.tera-public-subnet2",
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tera-private-RT1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:563725454582:route-table/rtb-012219b2ff5de425a",
            "id": "rtb-012219b2ff5de425a",
            "owner_id": "563725454582",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-01c6707d0c0739d79",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tera-private-RT1"
            },
            "tags_all": {
              "Name": "tera-private-RT1"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a0cb65b4363d7ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.NAT1",
            "aws_subnet.tera-public-subnet1",
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tera-private-RT2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:563725454582:route-table/rtb-03e757ff8e7f13d78",
            "id": "rtb-03e757ff8e7f13d78",
            "owner_id": "563725454582",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-01a64c3044c191c85",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tera-private-RT2"
            },
            "tags_all": {
              "Name": "tera-private-RT2"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a0cb65b4363d7ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.NAT2",
            "aws_subnet.tera-public-subnet2",
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tera-public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:563725454582:route-table/rtb-065f7d74918ea80b8",
            "id": "rtb-065f7d74918ea80b8",
            "owner_id": "563725454582",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07d631c26110c5d26",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tera-public-RT"
            },
            "tags_all": {
              "Name": "tera-public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a0cb65b4363d7ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02250322319f1fbc8",
            "route_table_id": "rtb-012219b2ff5de425a",
            "subnet_id": "subnet-0e8fa70e6ac8302e6"
          },
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.NAT1",
            "aws_route_table.tera-private-RT1",
            "aws_subnet.tera-private-subnet1",
            "aws_subnet.tera-public-subnet1",
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002aea006179c7c0b",
            "route_table_id": "rtb-03e757ff8e7f13d78",
            "subnet_id": "subnet-0e1ce565e6d42eaee"
          },
          "dependencies": [
            "aws_eip.eips",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.NAT2",
            "aws_route_table.tera-private-RT2",
            "aws_subnet.tera-private-subnet2",
            "aws_subnet.tera-public-subnet2",
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2590d50d28d6c6c",
            "route_table_id": "rtb-065f7d74918ea80b8",
            "subnet_id": "subnet-07ff7fc1368abe13f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.tera-public-RT",
            "aws_subnet.tera-public-subnet1",
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016571a4958975748",
            "route_table_id": "rtb-065f7d74918ea80b8",
            "subnet_id": "subnet-03b31f2cd6f1836de"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.tera-public-RT",
            "aws_subnet.tera-public-subnet2",
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Bastion-public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:563725454582:security-group/sg-0054660940deef4a0",
            "description": "Allow TLS inbound traffic and all outbound traffic sg2",
            "egress": [],
            "id": "sg-0054660940deef4a0",
            "ingress": [],
            "name": "server-sg2",
            "name_prefix": "",
            "owner_id": "563725454582",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Bastion-public-sg"
            },
            "tags_all": {
              "Name": "Bastion-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a0cb65b4363d7ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:563725454582:security-group/sg-03424400d0349619d",
            "description": "Allow TLS inbound traffic and all outbound traffic sg1",
            "egress": [],
            "id": "sg-03424400d0349619d",
            "ingress": [],
            "name": "server-sg",
            "name_prefix": "",
            "owner_id": "563725454582",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "server-sg"
            },
            "tags_all": {
              "Name": "server-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03a0cb65b4363d7ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_ipv4-sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-785517943",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03424400d0349619d",
            "security_group_rule_id": "sgr-0f46046fea8b14e01",
            "self": false,
            "source_security_group_id": "sg-0054660940deef4a0",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Bastion-public-sg",
            "aws_security_group.server-sg",
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tera-private-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:563725454582:subnet/subnet-0e8fa70e6ac8302e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8fa70e6ac8302e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "563725454582",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tera-private-subnet1"
            },
            "tags_all": {
              "Name": "tera-private-subnet1"
            },
            "vpc_id": "vpc-03a0cb65b4363d7ab"
          },
          "dependencies": [
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tera-private-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:563725454582:subnet/subnet-0e1ce565e6d42eaee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1ce565e6d42eaee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "563725454582",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tera-private-subnet2"
            },
            "tags_all": {
              "Name": "tera-private-subnet2"
            },
            "vpc_id": "vpc-03a0cb65b4363d7ab"
          },
          "dependencies": [
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tera-public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:563725454582:subnet/subnet-07ff7fc1368abe13f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ff7fc1368abe13f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "563725454582",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tera-public-subnet1"
            },
            "tags_all": {
              "Name": "tera-public-subnet1"
            },
            "vpc_id": "vpc-03a0cb65b4363d7ab"
          },
          "dependencies": [
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tera-public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:563725454582:subnet/subnet-03b31f2cd6f1836de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b31f2cd6f1836de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "563725454582",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tera-public-subnet2"
            },
            "tags_all": {
              "Name": "tera-public-subnet2"
            },
            "vpc_id": "vpc-03a0cb65b4363d7ab"
          },
          "dependencies": [
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tera-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:563725454582:vpc/vpc-03a0cb65b4363d7ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03c4cce254d77ca81",
            "default_route_table_id": "rtb-022fc545fa3f1ead9",
            "default_security_group_id": "sg-00594ccfdae2392d0",
            "dhcp_options_id": "dopt-0671964cb08ee5f45",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03a0cb65b4363d7ab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-022fc545fa3f1ead9",
            "owner_id": "563725454582",
            "tags": {
              "Name": "tera-vpc"
            },
            "tags_all": {
              "Name": "tera-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4-sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:563725454582:security-group-rule/sgr-0927cd8bfe7c849a6",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0927cd8bfe7c849a6",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03424400d0349619d",
            "security_group_rule_id": "sgr-0927cd8bfe7c849a6",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.server-sg",
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow_all_traffic_ipv4-sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:563725454582:security-group-rule/sgr-0ddc475180a7a7125",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ddc475180a7a7125",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0054660940deef4a0",
            "security_group_rule_id": "sgr-0ddc475180a7a7125",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Bastion-public-sg",
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_ssh_ipv4-sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:563725454582:security-group-rule/sgr-073e8fe222a1c3545",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-073e8fe222a1c3545",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0054660940deef4a0",
            "security_group_rule_id": "sgr-073e8fe222a1c3545",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Bastion-public-sg",
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4-sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:563725454582:security-group-rule/sgr-0ec1d18d2b2063f43",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0ec1d18d2b2063f43",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-03424400d0349619d",
            "security_group_rule_id": "sgr-0ec1d18d2b2063f43",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.server-sg",
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow_tls_ipv4-sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:563725454582:security-group-rule/sgr-061d37f1974da4bae",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-061d37f1974da4bae",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0054660940deef4a0",
            "security_group_rule_id": "sgr-061d37f1974da4bae",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Bastion-public-sg",
            "aws_vpc.tera-vpc"
          ]
        }
      ]
    }
  ]
}